<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone_field"
        android:phoneNumber="false"
        android:hint="@string/phone"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_below="@+id/phone_field"
        android:layout_toLeftOf="@+id/call_button"
        android:layout_toStartOf="@+id/call_button"
        android:id="@+id/gridLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buton_location"
            android:id="@+id/map_button"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="mapLocation" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_buton"
            android:id="@+id/web_button"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="webPage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooser_button"
            android:id="@+id/chooser_button"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="appChooser" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickContact_button"
            android:id="@+id/pick_contact_button"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="pickContact" />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buton_call"
        android:id="@+id/call_button"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/phone_field"
        android:layout_toEndOf="@+id/phone_field"
        android:onClick="call" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_textView"
        android:layout_alignLeft="@+id/phone_field"
        android:layout_alignStart="@+id/phone_field"
        android:layout_below="@+id/gridLayout"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_alignEnd="@+id/gridLayout"
        android:text="@string/contact_name_text" />

</RelativeLayout>
